Changed garbage collection strategy somehow performs better on Catalina with IntelliJ 2019.2